--- a/functions/package.json
+++ b/functions/package.json
@@ -14,9 +14,8 @@
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^12.4.0",
-    "firebase-functions": "^5.1.1",
-    "grammy": "^1.30.0"
+    "firebase-admin": "^12.1.0",
+    "firebase-functions": "^5.0.0"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
