--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^5.0.0",
-    "telegraf": "^4.16.3"
+    "node-telegram-bot-api": "^0.64.0"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
@@ -25,3 +25,5 @@
   },
   "private": true
 }
+
+
