--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "catoftoday",
   "version": "1.0.0",
   "description": "Cat of Today Telegram Mini App",
-  "main": "index.html",
   "scripts": {
-    "start": "firebase serve",
+    "start": "node index.js",
     "deploy": "firebase deploy"
   },
   "dependencies": {
