Fix start script to point to functions/index.js

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Cat of Today Telegram Mini App",
   "scripts": {
-    "start": "node index.js",
+    "start": "node functions/index.js",
     "deploy": "firebase deploy"
   },
   "dependencies": {
