removing firebase things

--- a/package.json
+++ b/package.json
@@ -3,15 +3,11 @@
   "version": "1.0.0",
   "description": "Cat of Today Telegram Mini App",
   "scripts": {
-    "start": "node functions/index.js",
-    "deploy": "firebase deploy"
+    "start": "node functions/index.js"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.45.3",
     "express": "^4.19.2",
     "node-telegram-bot-api": "^0.63.0"
-  },
-  "devDependencies": {
-    "firebase-tools": "^13.16.0"
   }
 }
