--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.45.3",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "node-telegram-bot-api": "^0.63.0"
   }
